--- a/advisor.html
+++ b/advisor.html
@@ -1,1 +1,196 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Safe Setup Advisor</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f5f5f5;
+      margin: 0;
+      padding: 0;
+    }
+    .advisor-container {
+      max-width: 480px;
+      margin: 80px auto;
+      background: #fff;
+      border-radius: 8px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.05);
+      padding: 32px;
+    }
+    h4 {
+      margin-bottom: 16px;
+      font-size: 1.25rem;
+      color: #111;
+    }
+    button.option {
+      display: block;
+      width: 100%;
+      text-align: left;
+      padding: 12px;
+      margin-bottom: 10px;
+      border: 1px solid #111;
+      border-radius: 4px;
+      background: #fff;
+      cursor: pointer;
+      transition: background 0.2s, color 0.2s;
+    }
+    button.option.active {
+      background: #111;
+      color: #fff;
+    }
+    button#next {
+      margin-top: 20px;
+      padding: 12px 20px;
+      background: #111;
+      color: #fff;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      font-weight: bold;
+    }
+    button#next:disabled {
+      opacity: 0.5;
+      cursor: not-allowed;
+    }
+    ul.recommendations {
+      list-style-type: disc;
+      padding-left: 20px;
+      margin: 16px 0;
+    }
+    .cta-links {
+      margin-top: 24px;
+      text-align: center;
+    }
+    .cta-links a,
+    .cta-links button {
+      display: inline-block;
+      margin: 0 8px;
+      padding: 10px 24px;
+      border-radius: 4px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    .cta-links a.primary {
+      background: #111;
+      color: #fff;
+    }
+    .cta-links button.secondary {
+      background: #fff;
+      color: #111;
+      border: 1px solid #111;
+      cursor: pointer;
+    }
+  </style>
+</head>
+<body>
 
+  <!-- Include Alpine.js -->
+  <script src="https://unpkg.com/alpinejs@3.x.x" defer></script>
+
+  <!-- Advisor Widget -->
+  <div x-data="safeAdvisor()" class="advisor-container">
+    <!-- Question Steps -->
+    <template x-if="step < questions.length">
+      <div>
+        <h4 x-text="questions[step].label"></h4>
+        <template x-for="opt in questions[step].options" :key="opt.value">
+          <button
+            class="option"
+            :class="{ 'active': answers[questions[step].id] === opt.value }"
+            @click="answers[questions[step].id] = opt.value"
+            x-text="opt.label">
+          </button>
+        </template>
+        <button
+          id="next"
+          @click="step++"
+          :disabled="!answers[questions[step].id]">
+          Next
+        </button>
+      </div>
+    </template>
+
+    <!-- Recommendation Result -->
+    <template x-if="step === questions.length">
+      <div>
+        <h4>Your Custom Safe Plan</h4>
+        <ul class="recommendations">
+          <template x-for="(line, i) in recommendation" :key="i">
+            <li x-text="line"></li>
+          </template>
+        </ul>
+        <div class="cta-links">
+          <a href="/app" class="primary">Launch Wallet</a>
+          <button class="secondary" @click="reset()">Try Again</button>
+        </div>
+      </div>
+    </template>
+  </div>
+
+  <!-- Widget Logic -->
+  <script>
+    function safeAdvisor() {
+      return {
+        step: 0,
+        answers: {},
+        questions: [
+          {
+            id: 'profile',
+            label: 'Select your security profile',
+            options: [
+              { value: 'essential', label: 'Essential security (< $1M TVL)' },
+              { value: 'treasury',  label: 'Treasury-grade (> $1M TVL)' }
+            ]
+          },
+          {
+            id: 'useCase',
+            label: 'Primary use case',
+            options: [
+              { value: 'treasury', label: 'Treasury management' },
+              { value: 'defi',     label: 'DeFi trading & staking' },
+              { value: 'hybrid',   label: 'Both' }
+            ]
+          },
+          {
+            id: 'signers',
+            label: 'How many co-signers?',
+            options: [
+              { value: '2-3', label: '2 of 3' },
+              { value: '3-5', label: '3 of 5' },
+              { value: '4-7', label: '4 of 7' }
+            ]
+          }
+        ],
+        get recommendation() {
+          const { profile, signers } = this.answers;
+          if (profile === 'essential' && signers === '2-3') {
+            return [
+              '2-of-3 (mobile, hardware key, co-signer)',
+              'Daily spend cap: 10% of avg. volume',
+              'Recovery: social recovery module'
+            ];
+          }
+          if (profile === 'treasury' && signers === '3-5') {
+            return [
+              '3-of-5 (2 hardware keys, 2 co-signers, 1 mobile)',
+              'Daily spend cap: 5% of TVL',
+              'Recovery: social + hardware fallback'
+            ];
+          }
+          return [
+            'Standard 2-of-3 setup',
+            'Adjust limits and recovery as needed'
+          ];
+        },
+        reset() {
+          this.step = 0;
+          this.answers = {};
+        }
+      }
+    }
+  </script>
+
+</body>
+</html>
