--- a/advisor.html
+++ b/advisor.html
@@ -7,121 +7,130 @@
   <style>
     body { margin:0; font-family:Arial,sans-serif; background:#f5f5f5; }
     .advisor { max-width:600px; margin:60px auto; padding:32px; background:#fff; border-radius:8px; box-shadow:0 4px 12px rgba(0,0,0,0.05); }
-    h2, h4 { margin:0 0 16px; color:#111; }
+    h2 { margin-bottom:24px; color:#111; font-size:1.5rem; text-align:center; }
     label { display:block; margin:16px 0 8px; font-weight:600; }
+    /* Threat slider */
     .slider { width:100%; }
-    .crossfader { position:relative; height:8px; background:#eee; border-radius:4px; margin:16px 0; }
-    .fader-knob { position:absolute; top:-4px; width:16px; height:16px; background:#111; border-radius:50%; cursor:grab; }
-    .options { display:grid; grid-template-columns:1fr 1fr; gap:12px; }
-    .options button { padding:12px; border:1px solid #111; border-radius:4px; background:#fff; cursor:pointer; transition:background .2s,color .2s; }
+    .slider-labels { display:flex; justify-content:space-between; font-size:0.75rem; color:#555; margin-top:4px; }
+    /* Cross-fader bar */
+    .tradeoff { position:relative; height:8px; background:#eee; border-radius:4px; margin:16px 0; }
+    .knob { position:absolute; top:-4px; width:16px; height:16px; background:#111; border-radius:50%; cursor:grab; }
+    /* Options */
+    .options { display:grid; grid-template-columns:repeat(auto-fit,minmax(120px,1fr)); gap:12px; }
+    .options button { padding:10px; border:1px solid #111; border-radius:4px; background:#fff; cursor:pointer; transition:background .2s, color .2s; }
     .options button.active { background:#111; color:#fff; }
     input[type=number] { width:100%; padding:10px; border:1px solid #ccc; border-radius:4px; }
+    /* Plan & tooltips */
     .plan { margin-top:32px; border-top:1px solid #eee; padding-top:24px; }
     .plan h4 { margin-bottom:16px; }
-    .plan ul { padding-left:20px; color:#555; }
+    .plan ul { padding-left:20px; color:#333; }
     .plan li { margin-bottom:8px; position:relative; }
+    .plan li .tip { margin-left:6px; color:#999; cursor:help; }
+    .tooltip { position:absolute; left:110%; top:0; background:#111; color:#fff; padding:6px 8px; border-radius:4px; font-size:0.75rem; white-space:nowrap; opacity:0; pointer-events:none; transition:opacity .2s; }
     .plan li:hover .tooltip { opacity:1; pointer-events:auto; }
-    .tooltip { position:absolute; top:0; left:110%; width:200px; padding:8px; background:#333; color:#fff; border-radius:4px; font-size:0.875rem; opacity:0; pointer-events:none; transition:opacity .2s; }
+    /* CTA */
     .cta { text-align:center; margin-top:24px; }
-    .cta a, .cta button { padding:10px 24px; margin:0 8px; border-radius:4px; font-weight:600; text-decoration:none; }
-    .cta a.primary { background:#111; color:#fff; }
-    .cta a.download { background:#fff; color:#111; border:1px solid #111; }
+    .cta a { display:inline-block; margin:0 8px; padding:10px 24px; border-radius:4px; text-decoration:none; font-weight:600; }
+    .primary { background:#111; color:#fff; }
+    .download { background:#fff; color:#111; border:1px solid #111; }
   </style>
 </head>
 <body>
 
-<script src="https://unpkg.com/alpinejs@3.x.x" defer></script>
+  <script src="https://unpkg.com/alpinejs@3.x.x" defer></script>
 
-<div x-data="safeAdvisor()" class="advisor">
-  <h2>Safe Setup Advisor</h2>
+  <div x-data="advisor()" class="advisor">
+    <h2>Safe Setup Advisor</h2>
 
-  <!-- Threat Slider -->
-  <label>Threat Profile</label>
-  <input type="range" min="0" max="100" step="25" x-model="threat" class="slider"/>
-  <div style="display:flex;justify-between;font-size:0.875rem;color:#555;">
-    <span>Low-stakes</span><span>Retail</span><span>DAOs</span><span>Large</span><span>Enterprise-grade</span>
+    <!-- Threat Profile -->
+    <label>Threat Profile</label>
+    <input type="range" class="slider" x-model="threat" min="0" max="100" step="25" />
+    <div class="slider-labels">
+      <span>Low</span><span>Retail</span><span>DAOs</span><span>Protocols</span><span>Enterprise</span>
+    </div>
+
+    <!-- Trade-off bar -->
+    <div class="tradeoff" @mousedown="drag=true" @mouseup="drag=false" @mousemove="onDrag($event)">
+      <div class="knob" :style="`left: calc(${threat}% - 8px)`"></div>
+    </div>
+
+    <!-- Use Case -->
+    <label>Primary Use Case</label>
+    <div class="options">
+      <button :class="{active:ans.use==='treasury'}" @click="ans.use='treasury'">Treasury</button>
+      <button :class="{active:ans.use==='defi'}"     @click="ans.use='defi'">DeFi</button>
+      <button :class="{active:ans.use==='both'}"     @click="ans.use='both'">Both</button>
+    </div>
+
+    <!-- Team Size -->
+    <label>Team Members</label>
+    <input type="number" x-model.number="ans.size" min="2" max="20" placeholder="e.g. 3" />
+
+    <!-- Recovery Style -->
+    <label>Recovery Style</label>
+    <div class="options">
+      <button :class="{active:ans.recov==='social'}"   @click="ans.recov='social'">Social</button>
+      <button :class="{active:ans.recov==='hardware'}" @click="ans.recov='hardware'">Hardware</button>
+      <button :class="{active:ans.recov==='seed'}"     @click="ans.recov='seed'">Seed</button>
+    </div>
+
+    <!-- Instant Blueprint -->
+    <div class="plan">
+      <h4>Your Blueprint</h4>
+      <ul>
+        <template x-for="(line,i) in blueprint" :key="i">
+          <li>
+            <span x-text="line"></span>
+            <span class="tip">ℹ️
+              <span class="tooltip" x-text="tips[i]"></span>
+            </span>
+          </li>
+        </template>
+      </ul>
+    </div>
+
+    <!-- CTAs -->
+    <div class="cta">
+      <a href="/app" class="primary">Launch Wallet</a>
+      <a href="#" @click.prevent="download()" class="download">Download PDF</a>
+    </div>
   </div>
 
-  <!-- Cross-Fader -->
-  <div class="crossfader" @mousedown.prevent="dragging = true" @mouseup="dragging = false" @mousemove="onDrag($event)">
-    <div class="fader-knob" :style="`left: calc(${threat}% - 8px);`"></div>
-  </div>
-
-  <!-- Inputs -->
-  <label>Primary Use Case</label>
-  <div class="options">
-    <button :class="{active:answers.useCase==='treasury'}" @click="answers.useCase='treasury'">Treasury</button>
-    <button :class="{active:answers.useCase==='defi'}" @click="answers.useCase='defi'">DeFi</button>
-    <button :class="{active:answers.useCase==='hybrid'}" @click="answers.useCase='hybrid'">Both</button>
-  </div>
-
-  <label>Team Members</label>
-  <input type="number" min="2" max="20" x-model.number="answers.teamSize" placeholder="e.g. 3"/>
-
-  <label>Recovery Style</label>
-  <div class="options">
-    <button :class="{active:answers.recovery==='social'}" @click="answers.recovery='social'">Social</button>
-    <button :class="{active:answers.recovery==='hardware'}" @click="answers.recovery='hardware'">Hardware</button>
-    <button :class="{active:answers.recovery==='seed'}" @click="answers.recovery='seed'">Seed Phrase</button>
-  </div>
-
-  <!-- Real-Time Plan -->
-  <div class="plan">
-    <h4>Your Blueprint</h4>
-    <ul>
-      <template x-for="(line,i) in recommendation" :key="i">
-        <li x-text="line">
-          <span class="tooltip" x-text="tooltips[i]"></span>
-        </li>
-      </template>
-    </ul>
-  </div>
-
-  <!-- CTAs -->
-  <div class="cta">
-    <a href="/app" class="primary">Launch Wallet</a>
-    <a href="#" @click.prevent="downloadPDF()" class="download">Download PDF</a>
-  </div>
-</div>
-
-<script>
-function safeAdvisor(){
-  return {
-    threat: 50,
-    dragging: false,
-    answers: { useCase:null, teamSize:null, recovery:null },
-    tooltips: [
-      'Groups of 2-of-N for small teams balance ease & security.',
-      'Daily caps limit exposure to market swings.',
-      'Social + hardware prevents single-point failures.',
-      'Seed-phrase is fallback but riskier if alone.'
-    ],
-    get recommendation(){
-      const rec=[]
-      const n = this.answers.teamSize||3
-      if(n<4) rec.push(`${n}-of-${n} multisig`)
-      else if(n<=7) rec.push(`3-of-${n} multisig`)
-      else rec.push(`4-of-${n} multisig`)
-      rec.push(this.threat<50 
-        ? 'Daily cap: 10% volume' 
-        : 'Daily cap: 5% TVL')
-      rec.push(this.answers.recovery==='seed' 
-        ? 'Recovery: seed phrase fallback' 
-        : 'Recovery: social + hardware')
-      return rec
-    },
-    onDrag(e){
-      if(!this.dragging) return
-      const rect = e.currentTarget.getBoundingClientRect()
-      let pct = ((e.clientX - rect.left)/rect.width)*100
-      this.threat = Math.max(0, Math.min(100, pct))
-    },
-    downloadPDF(){
-      alert('PDF download stub—implement as needed.')
+  <script>
+    function advisor(){
+      return {
+        threat:50, drag:false,
+        ans:{use:null,size:null,recov:null},
+        tips:[
+          '2-of-N is ideal for small teams.',
+          'Daily caps limit risk exposure.',
+          'Social recovery spreads trust.',
+          'Hardware backup secures keys.'
+        ],
+        get blueprint(){
+          const b=[]; const {use,size,recov} = this.ans;
+          if(size){
+            if(size<4) b.push(`${size}-of-${size} multisig`);
+            else if(size<=7) b.push(`3-of-${size} multisig`);
+            else b.push(`4-of-${size} multisig`);
+          }
+          // cap based on threat
+          b.push(this.threat<50? 'Cap:10% avg volume':'Cap:5% TVL');
+          // recovery
+          if(recov==='seed') b.push('Recovery: seed phrase fallback');
+          else b.push(`Recovery: ${recov} module`);
+          return b;
+        },
+        onDrag(e){
+          if(!this.drag) return;
+          const r=e.currentTarget.getBoundingClientRect();
+          let v=((e.clientX-r.left)/r.width)*100;
+          this.threat = Math.min(100, Math.max(0, v));
+        },
+        download(){ alert('PDF generation coming soon'); }
+      }
     }
-  }
-}
-</script>
+  </script>
 
 </body>
 </html>
